--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   auth-service:
     build: .
-    container_name: auth-service
+    container_name: app_1.0
     restart: unless-stopped
     ports:
       - "5000:5000"
