--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
-    "migrate": "node src/scripts/migrate.js",
+    "migrate": "node-pg-migrate --dir migrations --schema public up",
     "seed": "node src/scripts/seed.js"
   },
   "keywords": [
@@ -24,6 +24,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "node-pg-migrate": "^6.2.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
